# web-server

./: Cargo.toml  README.md  docker-compose.yml
migrations/2022-05-17-132454_create_projects/: up.sql
web-server-adapter/: Cargo.toml
web-server-adapter/src/: database_repository_impl.rs  lib.rs  models.rs  modules.rs  persistence.rs  repository.rs  schema.rs  settings.rs
web-server-adapter/src/persistence/: mysql_client.rs
web-server-adapter/src/repository/: project_repository_impl.rs
web-server-api/: Cargo.toml
web-server-api/src/: error_handling.rs  hasher.rs  main.rs  modules.rs  route.rs  server.rs  setting.rs  signal_handling.rs  trace.rs
web-server-api/src/route/: controllers.rs
web-server-api/src/route/controllers/: async_sync.rs  create_project.rs  execute_actor.rs
web-server-domain/: Cargo.toml
web-server-domain/src/: error.rs  lib.rs  setting.rs
web-server-domain/src/config/: development.toml
web-server-domain/src/model/: project.rs
web-server-domain/src/repository/: project.rs
web-server-usecase/: Cargo.toml
web-server-usecase/src/: actor.rs  lib.rs  usecase.rs
web-server-usecase/src/actor/: search_actor.rs  supervisor_actor.rs  timer_actor.rs
web-server-usecase/src/usecase/: actor_usecase.rs  project_usecase.rs
