[package]
name = "web-server-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-server-domain = { path = "../web-server-domain" }
#web-server-api = { path = "../web-server-api" } // api層に依存しちゃうとレイヤードアーキテクチャじゃなくなる
async-trait = "0.1.53"
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
serde = {version = "1.0.136", features = ["derive"]}
