[package]
name = "web-server-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
thiserror = "1.0.31"
config = "0.13.1"
serde = {version = "1.0.136", features = ["derive"]} # features = ["derive"]を指定しないとderiveでSerialize, Deserialize指定できない
tracing = "0.1.34"
