[package]
name = "web-server-usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-server-domain = { path = "../web-server-domain" }
web-server-adapter = { path = "../web-server-adapter" }
derive-new = "0.5.9"
